public/css/main.css
@import url("https://fonts.googleapis.com/css?family=Dancing+Script|Source+Sans+Pro");
html, body {
  margin: 0;
  padding: 0; }

:root {
  -webkit-box-sizing: border-box;
          box-sizing: border-box; }

*, *::before, *::after {
  -webkit-box-sizing: inherit;
          box-sizing: inherit; }

:root {
  font-family: 'Source Sans Pro', sans-serif; }

.fancy-text {
  font-family: 'Dancing Script', cursive; }

img {
  max-width: 100%;
  width: 100%; }

.container {
  max-width: 720px;
  max-width: 45rem;
  width: 100%;
  padding-left: 32px;
  padding-left: 2rem;
  padding-right: 32px;
  padding-right: 2rem;
  margin-left: auto;
  margin-right: auto; }

.flexy {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex; }

.flexy-central {
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap; }

.info-block {
  background: white;
  border: 1px solid #efefef;
  padding: 1.3em;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  /* border-width: 1px 1px 0; */ }

.info-block svg {
  float: left;
  width: 15em;
  -ms-flex-preferred-size: 30%;
      flex-basis: 30%; }

.info-block h2 {
  margin: 0;
  font-size: 3em;
  -ms-flex-preferred-size: 70%;
      flex-basis: 70%; }

.info-block p {
  -ms-flex-preferred-size: 70%;
      flex-basis: 70%; }

.block-pos-right svg {
  float: right; }

.stamp-500 {
  width: 100%;
  height: 34px;
  background: url("../assets/images/special-delivery.jpg");
  /* background: linear-gradient(
                    to right, 
                    rgba(255,255,255,0.7) 0%,
                    rgba(255,255,255,0.7) 100%
                ), 
                url('../assets/images/special-delivery.jpg'); */
  background-repeat: repeat;
  background-size: 200px;
  background-position: -10px -10px; }

.slanty {
  background: white;
  width: 70px;
  top: 0;
  height: 300vh;
  position: absolute;
  left: calc(50vw - 69px);
  -webkit-transform: skew(20deg);
          transform: skew(20deg);
  overflow: hidden;
  z-index: 6; }

.slanty::before {
  position: relative;
  -webkit-transform: skew(-20deg);
          transform: skew(-20deg);
  display: block;
  content: " ";
  background-color: black;
  background-image: url("../../assets/images/backgrounds/special-delivery.jpg");
  background-size: 140px;
  background-repeat: repeat;
  height: 100%;
  width: calc(100vw + 200px);
  left: calc(-50vw - 113px);
  background-attachment: fixed; }

.slanty1 {
  opacity: .2; }

.slanty2 {
  left: 53vw;
  width: 6vw; }

.slanty2::before {
  background-image: url("../../assets/images/backgrounds/asteroids.jpg"); }

.slanty3 {
  left: calc(50vw + 102px);
  opacity: .2; }

.slanty3::before {
  background-image: url("../../assets/images/backgrounds/geometrica.png"); }

@media (max-width: 50em) {
  .slanty2 {
    left: 0;
    position: relative;
    width: 100vw;
    height: 3em;
    -webkit-transform: none;
            transform: none;
    margin: 3em 0; }
  .slanty::before {
    width: 100%;
    left: 0;
    -webkit-transform: none;
            transform: none; } }

div[class*="slanty-container-"] {
  width: 165vw;
  height: 300vh;
  position: absolute;
  z-index: 3;
  -webkit-clip-path: polygon(0 0, 100% 0%, 100% 100%, 109vh 100%);
          clip-path: polygon(0 0, 100% 0%, 100% 100%, 109vh 100%);
  left: calc(52vw - 49vh); }

.slanty-container-right {
  overflow: hidden; }

.email,
.letter,
.info-attr-block--popup {
  position: fixed;
  top: 11vh;
  width: 70vw;
  left: 15vw;
  height: 44vw;
  max-height: 78vh; }

.email {
  z-index: 2;
  border: 1px solid black;
  border-radius: 3px; }

.letter {
  overflow: hidden;
  background-color: #f9f7ec;
  border: 1px solid #f9f7ec;
  z-index: 1; }

.email::before,
.letter::before {
  content: " ";
  display: block;
  background-color: inherit;
  height: 100%;
  width: 100%; }

.letter-address {
  font-family: 'Dancing Script', cursive;
  position: absolute;
  left: 7vw;
  top: 14vw;
  font-size: 2.2vw; }

.icon-stamp-bike {
  position: absolute;
  width: 7vw;
  top: 2vw;
  right: 2vw;
  z-index: 10;
  /* fill: #dad3ab; */
  fill: #ce869b; }

.icon-stamp {
  opacity: .5;
  position: absolute;
  top: 4.5vw;
  width: 11vw;
  right: 7vw;
  z-index: 12;
  fill: black; }

.email-container {
  position: absolute;
  top: 0;
  width: 100%;
  bottom: 0;
  left: 0;
  height: 100%;
  overflow: auto; }

.email-subject {
  border-bottom: 1px solid black;
  width: 100%;
  padding-left: 2.5vw; }

.email-subject h2 {
  margin: 2vw 0;
  font-size: 2.2vw; }

.email-content {
  padding-top: 2.5vw;
  padding-left: 2.5vw;
  width: 55vw;
  font-size: 1.2vw;
  padding-bottom: 6vw; }

.email-content a {
  color: #2020e4; }

.email-content h3 {
  font-size: 1.6vw;
  margin-top: 0; }

.email-reply {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding: 1.2vw 3vw 1.2vw 2.5vw;
  background: #2f2ffb;
  font-size: 1.6vw;
  position: absolute;
  bottom: 0;
  width: 100%; }

.letter-cont {
  display: none; }

.email-reply,
.email-reply * {
  text-decoration: none;
  color: white; }

.email-reply * {
  margin: 0; }

.icon-plane {
  width: 3.5vw;
  fill: currentColor; }
/* ... */

